--- a/css/styles.css
+++ b/css/styles.css
@@ -17,7 +17,7 @@
     display: block;
 }
 .main-title{
-    background-image: url(../images/profileimg.jpg);
+    background-image: url(../images/googleimg.jpeg);
     background-attachment: fixed;
     background-repeat: no-repeat;
     height: 100vh;
