--- a/css/styles.css
+++ b/css/styles.css
@@ -8,8 +8,9 @@
     left: 0;
     overflow-x: hidden; /* Disable horizontal scroll */
     padding-top: 20px;
-  }
-  .list-item{
+    padding-right:5px;
+}
+.list-item{
     font-size: 18px;
     padding: 6px 8px 6px 16px;
     text-decoration: none;
@@ -29,20 +30,25 @@
     color: white;
     text-shadow: 0px 0px 12px black;
     background-size: cover;
+    max-width: 100%;;
 }
 #sub-title{
     font-size:15px;
 }
-  /* When you mouse over the navigation links, change their color */
+
+/* When you mouse over the navigation links, change their color */
 .sidenav a:hover {
     color: #f1f1f1;
-  }
+}
   
-  /* Style page content */
-  .main {
-    margin-left: 165px; /* Same as the width of the sidebar */
-    padding: 0px;
-  }
+/* Style page content */
+.main {
+margin-left: 165px; /* Same as the width of the sidebar */
+padding: 0px;
+}
+
+
+
 /* ==============================SIDE NAVIGATION END======================================= */
 
 /*============================== MAIN LANDING PAGE SETUP ===================================*/
@@ -50,8 +56,6 @@
     max-width: 100%;
     object-fit: cover;
     height:400px;
-    /* border-radius: 50%;
-    padding-left:15px; */
 }
 .quote{
     margin-left: 10px;
@@ -135,7 +139,6 @@
 }
 .overlay-EY{
     max-width: 100%;
-    margin-bottom: auto;
 }
 .overlay-LA{
     max-width: 80%;
@@ -183,11 +186,13 @@
 .slider-icon-left-EY,
 .slider-icon-right-EY{
     background-color: rgba(191, 173, 0);
+    height: 100%;
 }
 
 .slider-icon-left-LA,
 .slider-icon-right-LA{
     background-color: rgba(82, 82, 82);
+    height: 100%;
 }
 
 .slider-icon-left-EY,
@@ -209,7 +214,6 @@
 	display: table;
 	clear: both;
 }
-
 
 /*============================== WORK EXPERIENCE END ===================================*/
 
@@ -248,6 +252,19 @@
     width: 510px;
     margin:20px;
 }
+@media (min-width:1024px){
+    .project-thumbnail{
+        width: 325px;
+        height: 220px;
+        font-size: 10px;
+        margin: 10px 40px;
+    }
+    .project-thumbnail img{
+        width: 325px;
+        height: 220px;
+ 
+    }
+}
 /*============================== SKILLS =============================================*/
 .img-lrg{
     width: 200px;
@@ -268,4 +285,31 @@
 .center-container{
     width:80%;
     margin: 0 auto;
+}
+
+
+/*============================== SKILLS =============================================*/
+@media(min-width:320px){
+    .photo-overlay-EY{
+        display: none;
+    }
+    .sidenav{
+        display:none
+    }
+    .main{
+        margin-left: 0;
+    }
+}
+
+@media(min-width:768px){
+    .overlay-EY{
+        width:80%;
+        justify-content: center;
+    }
+    .main{
+        margin-left:130px;
+    }
+    .sidenav{
+        padding-left:0;
+    }
 }
