--- a/css/styles.css
+++ b/css/styles.css
@@ -42,9 +42,9 @@
 }
   
 /* Style page content */
-.main {
-margin-left: 165px; /* Same as the width of the sidebar */
-padding: 0px;
+/* .main {
+margin-left: 165px; Same as the width of the sidebar */
+/* padding: 0px; */
 }
 
 
@@ -88,11 +88,11 @@ padding: 0px;
     margin-right: 30px;
 }
 .EY-title{
-    font-size: 40px;
+    font-size: 20px;
     margin-bottom: 8px;
 }
 .LA-title{
-    font-size: 40px;
+    font-size: 20px;
     margin-bottom:0;
 }
 #LimitlessLogo{
@@ -252,19 +252,7 @@ padding: 0px;
     width: 510px;
     margin:20px;
 }
-@media (min-width:1024px){
-    .project-thumbnail{
-        width: 325px;
-        height: 220px;
-        font-size: 10px;
-        margin: 10px 40px;
-    }
-    .project-thumbnail img{
-        width: 325px;
-        height: 220px;
- 
-    }
-}
+
 /*============================== SKILLS =============================================*/
 .img-lrg{
     width: 200px;
@@ -288,9 +276,10 @@ padding: 0px;
 }
 
 
-/*============================== SKILLS =============================================*/
+/*============================== Media Queries =============================================*/
 @media(min-width:320px){
-    .photo-overlay-EY{
+    .photo-overlay-EY,
+    .photo-overlay-LA{
         display: none;
     }
     .sidenav{
@@ -312,4 +301,46 @@ padding: 0px;
     .sidenav{
         padding-left:0;
     }
+    .EY-title{
+        font-size: 40px;
+        margin-bottom: 8px;
+    }
+    .LA-title{
+        font-size: 40px;
+        margin-bottom:0;
+    }
+}
+@media (min-width:1024px){
+    .project-thumbnail{
+        width: 325px;
+        height: 220px;
+        font-size: 10px;
+        margin: 10px 40px;
+    }
+    .project-thumbnail img{
+        width: 325px;
+        height: 220px;
+ 
+    }
+    .main {
+        margin-left: 165px; /* Same as the width of the sidebar */
+        padding: 0px;
+        }
+
+}
+@media (min-width:1440px){
+    .project-thumbnail{
+        width: 450px;
+        height: 350px;
+        font-size: 10px;
+        margin: 40px;
+    }
+    .project-thumbnail img{
+        width: 450px;
+        height: 350px;
+        
+ 
+    }
+
+
 }
