--- a/css/styles.css
+++ b/css/styles.css
@@ -18,6 +18,7 @@
     display: block;
 }
 .main-title{
+    background-position: 18%;
     background-image: url(../images/googleimg.jpeg);
     background-attachment: fixed;
     background-repeat: no-repeat;
@@ -30,7 +31,7 @@
     color: white;
     text-shadow: 0px 0px 12px black;
     background-size: cover;
-    max-width: 100%;;
+    max-width: 100%;
 }
 #sub-title{
     font-size:15px;
@@ -374,13 +375,13 @@
 }
 @media (min-width:1440px){
     .project-thumbnail{
-        width: 450px;
+        width: 375px;
         height: 350px;
         font-size: 16px;
         margin: 40px;
     }
     .project-thumbnail img{
-        width: 450px;
+        width: 375px;
         height: 350px;
         
     }
