--- a/css/styles.css
+++ b/css/styles.css
@@ -268,7 +268,11 @@
     height: 80px;
 }
 
-
+/*============================== CONTACT =============================================*/
+.contact-icon{
+    width: 100px;
+    margin: 0 100px;
+}
 
 /*============================== Media Queries =============================================*/
 @media(min-width:320px){
