--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,31 @@
+@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital@0;1&family=IBM+Plex+Sans+Condensed:ital@0;1&family=IBM+Plex+Sans:ital,wght@0,100;0,400;0,700;1,100;1,400;1,700&family=IBM+Plex+Serif:ital@0;1&display=swap');
+/* 
+font-family: 'IBM Plex Mono', monospace;
+font-family: 'IBM Plex Sans', sans-serif;
+font-family: 'IBM Plex Sans Condensed', sans-serif;
+font-family: 'IBM Plex Serif', serif; */
+
+/* =========================GENERAL STYLE=================================== */
+.content-heading{
+    color:#4A44F2;
+    font-family: 'IBM Plex Sans';
+    letter-spacing: 0.075em;
+    font-weight: 400;
+
+}
+p,
+li{
+    font-family: 'IBM Plex Sans';
+    font-size: 17px;
+}
+.main{
+    position: relative;
+}
+
 /* =========================SIDE NAVIGATION SETUP=================================== */
 .sidenav {
     height: 100%; /* Full-height: remove this if you want "auto" height */
-    width: 160px; /* Set the width of the sidebar */
+    width: 165px; /* Set the width of the sidebar */
     position: fixed; /* Fixed Sidebar (stay in place on scroll) */
     z-index: 1; /* Stay on top */
     top: 0; /* Stay at the top */
@@ -16,7 +40,14 @@
     text-decoration: none;
     color: #818181;
     display: block;
+    font-family: 'IBM Plex Sans';
+
 }
+ 
+.center-container{
+    margin: 0 auto;
+    border: none;
+}  
 .main-title{
     background-position: 18%;
     background-image: url(../images/googleimg.jpeg);
@@ -36,12 +67,40 @@
 #sub-title{
     font-size:15px;
 }
+.mission-statement{
+    color:#05f29b;
+    font-weight: 400;
+    font-size: 22px;
+    text-align: center;
+    font-family: 'IBM Plex Sans Condensed';
+
+}
+.name{
+    font-family: 'IBM Plex Sans';
+    color: #3726A6;
+    letter-spacing: 0.075em;
+    margin-left: 10px;
+    font-weight: 600;
+}
+.introduction{
+    font-weight: 600;
+    font-family: 'IBM Plex Sans';
+    letter-spacing: 0.075em;
+}
+.designation{
+    font-style: oblique;
+    font-family: 'IBM Plex Sans Condensed';
+    letter-spacing: 0.075em;
+
+}
 
 /* When you mouse over the navigation links, change their color */
 .sidenav a:hover {
-    color: #f1f1f1;
+    color: #F2BE22;
 }
-
+.sidenav a:active {
+    color: #F2BE22;
+}
 /* ==============================SIDE NAVIGATION END======================================= */
 
 /*============================== MAIN LANDING PAGE SETUP ===================================*/
@@ -66,28 +125,49 @@
 
 
 .subheading{
-    line-height: 0;
+    margin-top: auto;
     font-style: italic;
-    margin-left: 100px;
+    margin-left: 50px;
+    color: #05f29b;
 }
 .logo{
     width: 120px;
     height:100px;
     margin-right: 30px;
 }
-.EY-title{
-    font-size: 20px;
-    margin-bottom: 8px;
-}
+.EY-title,
 .LA-title{
     font-size: 20px;
-    margin-bottom:0;
+    margin-bottom: 8px;
+    font-family: 'IBM Plex Sans';
+    color:#3726A6;
+    font-weight: 400;
 }
+.job-role{
+    font-family: 'IBM Plex Sans Condensed';
+    color:#3726A6;
+    letter-spacing: 0.075em;
+}
+.work-date{
+    color: #05f29b;
+}
+
 #LimitlessLogo{
     width:50px;
     height:70px;
     margin-bottom:0;
 }
+.company-description{
+    font-family: 'IBM Plex Sans';
+    margin: 10px;
+}
+.card-title{
+    color: #F2BE22;
+    font-family: 'IBM Plex Sans';
+    margin-top: 5px;
+    text-align: center;
+}
+
 .skills-logo{
     width: 60px;
     height: 60px;
@@ -147,7 +227,6 @@
     cursor: pointer;
     transform: translateX(0);
 }
-
 
 .photo-overlay-EY,
 .photo-overlay-LA{
@@ -212,15 +291,24 @@
     object-fit: cover;
     border-radius: 15px;
 }
+.project-title{
+    color: #F2BE22;
+    font-weight: 600;
+    font-size: 17px;
+}
+.project-text{
+    font-size: 15px;
+}
 .button {
-    background-color: #4CAF50; /* Green */
+    background-color:  #05f29b; /* Green */
     border: none;
     color: white;
-    padding: 15px 32px;
+    padding: 10px 20px;
     text-align: center;
     text-decoration: none;
     display: inline-block;
-    font-size: 16px;
+    font-size: 13px;
+    margin-top: auto;
   }
 .project-overlay{
     color: #fff;
@@ -235,7 +323,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background: rgba(0,0,0, .5);
+    background: rgba(0,0,0, .8);
     opacity: 0;
     transition: opacity .5s;
 }
@@ -249,31 +337,55 @@
     width: 510px;
     margin:20px;
 }
+/*============================== EDUCATION =============================================*/
+.degree-title{
+    color:#05f29b;
+    font-style: oblique;
+}
+.degree-header{
+    font-weight: 600;
+}
+.card-body{
+    padding:0;
+}
+
 
 /*============================== SKILLS =============================================*/
-.img-lrg{
-    width: 200px;
-    margin: 0;
-    padding: 0
-}
-.img-med{
-    width: 100px;
-    height: 100px;
-    margin: 0;
-    padding: 0
-
-}
-.img-sml{
+.skill-icon{
     width: 80px;
-    height: 80px;
+    border-radius: 50%;
+}
+.skill-group{
+    margin: 0 20px;
+    flex-direction: column;
+}
+.skill-container{
+    margin:0 auto;
 }
 
 /*============================== CONTACT =============================================*/
 .contact-icon{
-    width: 80px;
-    margin: 15px 100px;
+    width: 60px;
+    margin: 1em;
 }
-
+.contact-img-linkedin,
+.contact-img-gmail,
+.contact-img-github
+{
+    transition: .2s;
+}
+.contact-img-linkedin:hover{
+    fill: #0072b1;
+}
+.contact-img-gmail:hover{
+    fill: #D44638;
+}
+.contact-img-github:hover{
+    fill: #F4CBB2;
+}
+.contact-container{
+    margin-left: 10px;
+}
 /*============================== Media Queries =============================================*/
 @media(min-width:320px){
     .photo-overlay-EY,
@@ -309,8 +421,10 @@
 }
 
 @media(min-width:768px){
+    .mission-statement{
+        font-size: 30px;
+    }
     .overlay-EY{
-        width:80%;
         justify-content: center;
     }
     .main{
@@ -351,27 +465,34 @@
     .center-container{
         width:80%;
         margin: 0 auto;
+        border: none;
     }   
     .contact-icon{
         width: 100px;
         margin: 0 25px;
     }
+    .large-breakpoint{
+        display: flex;
+        justify-content: space-around;
+    }
 }
 
 @media (min-width:1024px){
+    .mission-statement{
+        font-size: 40px;
+    }
     .project-thumbnail{
-        width: 320px;
-        height: 220px;
+        width: 300px;
+        height: 200px;
         font-size: 10px;
         margin: 10px 40px;
     }
     .project-thumbnail img{
-        width: 320px;
-        height: 220px;
- 
+        width: 300px;
+        height: 200px;
     }
     .main {
-        margin-left: 165px; /* Same as the width of the sidebar */
+        margin-left: 170px; /* Same as the width of the sidebar */
         padding: 0px;
     }
     .card,
@@ -379,20 +500,47 @@
         width:100%;
         margin: 0 auto;
     } 
-
-       
+    .sidenav{
+        width: 170px;
+    }
+    .content{
+        margin-right: 100px;
+    }
+    .skill-icon{
+        width: 100px;
+        border-radius: 50%;
+    }
+    .skill-group{
+        margin: 0 20px;
+        display: inline-flex;
+        flex-direction: column;
+        font-size: 15px;
+    }
+    .card-title{
+        font-size: 18px;
+    }
+    .contact-container{
+        justify-content: center;
+        margin: 30px;
+    }
 }
 @media (min-width:1440px){
+    .mission-statement{
+        font-size: 50px;
+    }
     .project-thumbnail{
-        width: 375px;
-        height: 350px;
-        font-size: 16px;
+        width: 350px;
+        height: 250px;
+        font-size: 13px;
         margin: 40px;
     }
     .project-thumbnail img{
-        width: 375px;
-        height: 350px;
-        
+        width: 350px;
+        height: 250px; 
+    }
+    .skill-icon{
+        width: 150px;
+        border-radius: 50%;
     }
     .card,
     .center-container{
@@ -402,5 +550,12 @@
     .contact-icon{
         margin: 0 100px;
     }
+    .main-title{
+        width: 100%;
+    }
+    .skill-container{
+        width: 90%;
+    }
+
 
 }
