--- a/css/styles.css
+++ b/css/styles.css
@@ -519,6 +519,7 @@ li{
     }
     .skill-icon{
         width: 100px;
+        height: 100px;
         border-radius: 50%;
     }
     .skill-group{
