--- a/css/styles.css
+++ b/css/styles.css
@@ -329,6 +329,11 @@ li{
     opacity: 0;
     transition: opacity .5s;
 }
+.project-overlay p,
+.project-overlay li{
+    font-size: 9.5px;
+
+}
 .project-overlay:hover{
     opacity: 1;
 }
@@ -461,6 +466,11 @@ li{
         height: 200px;
         
     }
+    .project-overlay p,
+    .project-overlay li{
+        font-size: 11.5px;
+
+}
     .project-overlay li{
         padding:0;
         margin-right:5px;
@@ -553,6 +563,11 @@ li{
         width: 350px;
         height: 250px; 
     }
+    .project-overlay p,
+    .project-overlay li{
+        font-size: 14px;
+
+}
     .skill-icon{
         width: 150px;
         border-radius: 50%;
