--- a/css/styles.css
+++ b/css/styles.css
@@ -49,11 +49,12 @@ li{
     border: none;
 }  
 .main-title{
-    background-position: 40%;
+    background-position: 50%;
     background-image: url(../images/profileimg.jpg);
     background-attachment: fixed;
     background-repeat: no-repeat;
     height: 100vh;
+    max-width: 100;
     object-fit: fill;
     display: flex;
     flex-direction: column;
@@ -62,7 +63,6 @@ li{
     color: white;
     text-shadow: 0px 0px 12px black;
     background-size: cover;
-    max-width: 100%;
 }
 #sub-title{
     font-size:15px;
@@ -429,6 +429,22 @@ li{
 }
 
 @media(min-width:768px){
+    .main-title{
+        background-position: 40%;
+        background-image: url(../images/profileimg.jpg);
+        background-attachment: fixed;
+        background-repeat: no-repeat;
+        height: 100vh;
+        object-fit: fill;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        color: white;
+        text-shadow: 0px 0px 12px black;
+        background-size: cover;
+        max-width: 100%;
+    }
     .mission-statement{
         font-size: 30px;
     }
@@ -503,13 +519,13 @@ li{
         font-size: 18px;
     }
     .project-thumbnail{
-        width: 300px;
+        width: 220px;
         height: 200px;
         font-size: 10px;
         margin: 10px 40px;
     }
     .project-thumbnail img{
-        width: 300px;
+        width: 220px;
         height: 200px;
     }
     .main {
@@ -518,7 +534,6 @@ li{
     }
     .card,
     .center-container{
-        width:100%;
         margin: 0 auto;
     } 
     .sidenav{
@@ -544,6 +559,9 @@ li{
     .contact-container{
         justify-content: center;
         margin: 30px;
+    }
+    .transform-active{
+        transform: translateX(-93%);
     }
 }
 @media (min-width:1440px){
