--- a/css/styles.css
+++ b/css/styles.css
@@ -49,10 +49,10 @@ li{
     border: none;
 }  
 .main-title{
-    background-position: center;
     background-image: url(../images/profileimg.jpg);
     background-position: center;
-    height: 100vh;
+    height: 320px;
+    width: 320px;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -427,6 +427,9 @@ li{
 }
 
 @media(min-width:768px){
+    .introduction{
+        font-size: 3em;
+    }
     .main-title{
         background-position: 40%;
         background-image: url(../images/profileimg.jpg);
@@ -441,7 +444,7 @@ li{
         color: white;
         text-shadow: 0px 0px 12px black;
         background-size: cover;
-        max-width: 100%;
+        width: 100%;
     }
     .mission-statement{
         font-size: 30px;
@@ -563,6 +566,9 @@ li{
     }
 }
 @media (min-width:1440px){
+    .introduction{
+        font-size: 5em;
+    }
     .mission-statement{
         font-size: 50px;
     }
