--- a/css/styles.css
+++ b/css/styles.css
@@ -52,7 +52,7 @@ li{
     background-image: url(../images/profileimg.jpg);
     background-position: center;
     height: 400px;
-    width: 500px;
+    width: 100vw;
     display: flex;
     flex-direction: column;
     justify-content: center;
