--- a/css/styles.css
+++ b/css/styles.css
@@ -59,7 +59,8 @@ li{
     text-align: center;
     color: white;
     text-shadow: 0px 0px 12px black;
-    background-size: cover;
+    background-size: contain;
+    background-repeat: no-repeat;
 }
 #sub-title{
     font-size:15px;
