updated heading margin

--- a/css/styles.css
+++ b/css/styles.css
@@ -11,6 +11,7 @@ font-family: 'IBM Plex Serif', serif; */
     font-family: 'IBM Plex Sans';
     letter-spacing: 0.075em;
     font-weight: 400;
+    margin-left: 10px;
 
 }
 p,
